gl33-master/src/test/deca/context/invalid/other/appelFonctionInexistante.deca
// Test de contexte invalide : appel à une fonction qui n'existe pas

class MyClass{

    int puissance(int a){
        return a*a;
    }
}

{
    MyClass m = new MyClass();
    int x = m.power(2);
}
